--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -3629,33 +3629,53 @@
     </div>
 
     <div class="sponsors">
-        <div style="height: 30px;"></div>
+        <div style="height: 15px;"></div>
         <div class="col-lg-12">
             <h3 class="college-name" style="margin-top: 30px;">Powered By</h3>
         </div>
-            <div style="height: 30px;"></div>
-            <div class="container">
-                <div class="row">
+        <div style="height: 15px;"></div>
+        <div class="container">
+            <div class="row">
 
-                    <img class="col-lg-3 col-lg-offset-0 col-md-4 col-md-offset-0 col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 sponsor-image img-responsive"
-                         src="assets/images/FINAL_CSE_LOGO.png" alt=""/>
-
-
-                    <img class="col-lg-3 col-lg-offset-0 col-md-4 col-md-offset-0 col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 sponsor-image img-responsive"
-                         src="assets/images/DUBeat.jpg" alt=""/>
-
-                    <img class="col-lg-3 col-lg-offset-0 col-md-4 col-md-offset-0 col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 sponsor-image img-responsive"
-                         src="assets/images/cllogo.png" alt=""/>
+                <img class="col-lg-3 col-lg-offset-0 col-md-4 col-md-offset-0 col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 sponsor-image img-responsive"
+                     src="assets/images/FINAL_CSE_LOGO.png" alt=""/>
 
 
-                </div>
+                <img class="col-lg-3 col-lg-offset-0 col-md-4 col-md-offset-0 col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 sponsor-image img-responsive"
+                     src="assets/images/DUBeat.jpg" alt=""/>
+
+                <img class="col-lg-3 col-lg-offset-0 col-md-4 col-md-offset-0 col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 sponsor-image img-responsive"
+                     src="assets/images/cllogo.png" alt=""/>
+
 
             </div>
+
         </div>
+        <div class="contact">
+            <div class="container">
+                <div style="height: 50px;"></div>
+                <div class="row" style="text-align: center;">
+                    <div class="glyphicon glyphicon-earphone" style="color:white; " aria-hidden="true">
+                        Arushi Mishra: 8800725617, Rhea Shukla: 8527705663
+                    </div>
 
+                </div>
+                <div style="height: 30px;"></div>
 
+                <div class="row" style="text-align: center;">
+                    <div class="glyphicon glyphicon-envelope" style="color:white; " aria-hidden="true">
+                        ecophoriaknc201516@gmail.com
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="contact">This will be the contact space</div>
+
+
 </div>
+
+</div>
+
+
 
 
